Changed some code to be cleaner and added minScale